# lectures

lecture-01/: README.md
lecture-01/slides/: lecture-01.pptx
lecture-02/: README.md
lecture-02/code/assembly/: hello_x86.S
lecture-02/code/cmake_example/: CMakeLists.txt  README.md
lecture-02/slides/: Lecture_02.pptx
lecture-03/code/system_call/: CMakeLists.txt  system_call.c
lecture-03/code/virtualization_abstraction/: README.md  common.h  cpu.c  io.c  mem.c
lecture-03/slides/: Lecture_03.pptx
lecture-04/code/: main.c
lecture-04/slides/: Lecture_04.pptx
lecture-05/code/: main.c  segfault.c
lecture-05/slides/: Lecture_05.pptx
lecture-06/slides/: Lecture_06.pptx
lecture-07/code/memory_examples/: CMakeLists.txt  allocation.c
lecture-07/slides/: Lecture-07.pptx
lecture-08/slides/: Lecture_08.pptx
lecture-09/slides/: Lecture_09.pptx
lecture-10/code/: example_1.c  example_2.c  example_3.c
lecture-10/slides/: Lecture_10.pptx
lecture-11/code/: race_condition.c
lecture-11/slides/: Lecture_11.pptx
lecture-12/code/: race_condition.c
lecture-12/slides/: Lecture_12.pptx
lecture-13/code/: CMakeLists.txt  producer_consumer.c  thread_struct_example.c
lecture-13/slides/: Lecture_13.pptx
syllabus/: syllabus.md
vmsetup/: vmsetup.md
